--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,9 @@ language: ruby
 cache: bundler
 rvm:
   - ruby-head
-  - 2.4.2
-  - 2.3.5
+  - 2.5.0
+  - 2.4.3
+  - 2.3.6
   - 2.2.8
   - 2.1.10
   - 2.0.0
@@ -32,11 +33,17 @@ matrix:
       gemfile: test/gemfiles/Gemfile.rails-5.0.x
     - rvm: 2.1.10
       gemfile: test/gemfiles/Gemfile.rails-5.0.x.erubi
-    - rvm: 2.4.2
+    - rvm: 2.4.3
       gemfile: test/gemfiles/Gemfile.rails-4.0.x
-    - rvm: 2.4.2
+    - rvm: 2.4.3
       gemfile: test/gemfiles/Gemfile.rails-4.1.x
-    - rvm: 2.4.2
+    - rvm: 2.4.3
+      gemfile: test/gemfiles/Gemfile.rails-4.2.x
+    - rvm: 2.5.0
+      gemfile: test/gemfiles/Gemfile.rails-4.0.x
+    - rvm: 2.5.0
+      gemfile: test/gemfiles/Gemfile.rails-4.1.x
+    - rvm: 2.5.0
       gemfile: test/gemfiles/Gemfile.rails-4.2.x
     - rvm: ruby-head
       gemfile: test/gemfiles/Gemfile.rails-4.0.x
@@ -45,10 +52,12 @@ matrix:
     - rvm: ruby-head
       gemfile: test/gemfiles/Gemfile.rails-4.2.x
   include:
-    - rvm: 2.4.2
+    - rvm: 2.4.3
       gemfile: test/gemfiles/Gemfile.rails-edge
   allow_failures:
+    - rvm: ruby-head
     - rvm: rbx-3
     - gemfile: test/gemfiles/Gemfile.rails-edge
   fast_finish: true
+before_install: "gem update --system" # https://github.com/travis-ci/travis-ci/issues/8974
 script: "bundle exec rake submodules test"
